[gd_scene load_steps=5 format=3 uid="uid://ui_scene"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.08, 0.08, 0.1, 0.92)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="button_normal"]
bg_color = Color(0.15, 0.15, 0.17, 0.9)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="button_hover"]
bg_color = Color(0.22, 0.22, 0.25, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="UI" type="CanvasLayer"]
script = ExtResource("1")

[node name="TopPanel" type="PanelContainer" parent="."]
offset_left = 12.0
offset_top = 12.0
offset_right = 180.0
offset_bottom = 156.0
theme_override_styles/panel = SubResource("panel_style")

[node name="VBox" type="VBoxContainer" parent="TopPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="MoneyLabel" type="Label" parent="TopPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "$200"

[node name="LivesLabel" type="Label" parent="TopPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "â™¥ 20"

[node name="WaveLabel" type="Label" parent="TopPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.95, 1)
theme_override_font_sizes/font_size = 18
text = "Wave 1"

[node name="HSeparator" type="HSeparator" parent="TopPanel/VBox"]
layout_mode = 2

[node name="Tower1Button" type="Button" parent="TopPanel/VBox"]
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("button_normal")
theme_override_styles/hover = SubResource("button_hover")
theme_override_styles/pressed = SubResource("button_normal")
text = "Tower  $50"

[node name="Tower2Button" type="Button" parent="TopPanel/VBox"]
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("button_normal")
theme_override_styles/hover = SubResource("button_hover")
theme_override_styles/pressed = SubResource("button_normal")
text = "Fast  $100"

[node name="GameOverPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -80.0
offset_right = 140.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("panel_style")

[node name="VBox" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="GameOverPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 28
text = "DEFEATED"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/VBox"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("button_normal")
theme_override_styles/hover = SubResource("button_hover")
text = "Restart"

[connection signal="pressed" from="TopPanel/VBox/Tower1Button" to="." method="_on_tower1_button_pressed"]
[connection signal="pressed" from="TopPanel/VBox/Tower2Button" to="." method="_on_tower2_button_pressed"]
[connection signal="pressed" from="GameOverPanel/VBox/RestartButton" to="." method="_on_restart_button_pressed"]
